<resources>
    <!--  アプリケーション  -->
    <string name="app_name">Color Library</string>
    <!--  メニュー  -->
    <string name="menu_list_all">全て</string>
    <string name="menu_list_develop">実装</string>
    <string name="menu_list_meeting">打ち合わせ</string>
    <string name="menu_list_document">資料作成</string>
    <string name="menu_list_support">顧客対応</string>
    <string name="menu_list_design">設計</string>
    <string name="menu_list_other">その他</string>
    <!--  ボタン  -->
    <string name="btn_save">登録</string>
    <string name="btn_delete">削除</string>
    <string name="btn_edit">編集</string>
    <!--  TextView  -->
    <string name="tv_color_code">#</string>
    <!--  EditView  -->
    <string name="et_color_code">Code</string>
    <string name="et_color_name">Name</string>
    <string name="et_color_red">R</string>
    <string name="et_color_green">G</string>
    <string name="et_color_blue">B</string>
    <!--  ツールバー  -->
    <string name="toolbar_insert">Color Regist</string>
    <!--  エラー  -->
    <string name="err_insert_code">カラーコードを入力してください</string>
    <string name="err_save">データ更新に失敗しました。</string>

</resources>