<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:theme="@style/customToolbar">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <View
            android:id="@+id/viewColor"
            android:layout_width="104dp"
            android:layout_height="100dp"
            android:layout_margin="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_color_code"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="23sp"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/et_color_code" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/etRed"
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:text="@string/et_color_red" />

        <EditText
            android:id="@+id/etGreen"
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:text="@string/et_color_green" />

        <EditText
            android:id="@+id/etBlue"
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:text="@string/et_color_blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:text="@string/et_color_name" />

    </LinearLayout>

</LinearLayout>